# photo-scoring

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  TODO.md  calibrate.py  pyproject.toml  render.yaml  serve_viewer.py  stack.md  test_10_with_metadata.csv  test_photos_gemini3.csv  test_photos_no_gpt.csv  test_triage_now.sh  viewer.html
.claude/: settings.json
.claude/commands/: clear-cache.md  costs.md  fix-issue.md  fix.md  lint.md  release.md  score.md  test.md  ux-test.md  viewer.md
.claude/skills/: README.md  check-costs.md  run-tests.md  score-photos.md  start-viewer.md
.cursor/rules/: architecture-decisions.mdc  cloud-testing.mdc  openrouter-client.mdc  prompts-engineering.mdc  scoring-pipeline.mdc  sqlite-cache.mdc  web-viewer.mdc
.github/workflows/: desktop-release.yml  keep-alive.yml  test.yml
configs/: default.yaml  local.yaml
docs/: COMPETITIVE_RESEARCH.md
docs/adr/: 001-background-job-processing.md  001-inference-caching-strategy.md  002-multi-model-composite-scoring.md  003-monorepo-shared-core.md  004-template-based-explanations.md  005-desktop-electron-sidecar.md  006-credit-billing-system.md  007-supabase-authentication.md  008-yaml-configuration.md  009-grid-triage.md  010-supabase-claude-code-integration.md  011-triage-memory-optimization.md  012-product-modes.md  README.md  (+3 more)
photo_score/: __init__.py  cli.py
supabase/: config.toml
tests/: __init__.py  test_cache.py  test_config.py  test_explanations.py  test_inference.py  test_reducer.py  test_sidecar_cache.py  test_triage.py
(+57 files in other folders)
